--- a/src/components/common/PlaceHolder.module.css
+++ b/src/components/common/PlaceHolder.module.css
@@ -6,3 +6,15 @@
   border: 2px solid var(--border-color);
   border-radius: 0.5rem;
 }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
