--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   --navlink-pg: #1e293b80;
 
   --border-color: #1e293b80;
-  --card-pg: #1e1e1e;
+  --card-pg: #0f172a;
   --danger-color: #ff6b6b;
 }
 
