--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -40,7 +40,8 @@
 
   .logoIcon {
     color: var(--primary-accent);
-    font-size: 1.75rem;
+    font-size: 0.5rem;
+    width: 2rem;
   }
   .logoText {
     margin-left: 5px;
